--- a/style.css
+++ b/style.css
@@ -15,6 +15,27 @@ body {
     height: 100vh;
 }
 
+.screen {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    padding: 0;
+}
+
+#menu {
+
+}
+#pause {
+    display: none;
+}
+#game {
+    display: none;
+}
+#gameOver {
+    display: none;
+}
+
 #score {
     font-size: 150%;
 }
