--- a/style.css
+++ b/style.css
@@ -21,7 +21,17 @@ body {
     display: none;
 }
 
-.screen {
+.ui {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 2%;
+}
+.tab {
+    position: fixed;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -31,11 +41,11 @@ body {
 
 button {
     font-family: monospace;
-    font-size: 180%;
-    width: 210%;
-    padding: 20%;
+    font-size: clamp(1.5rem, 3vw, 2.7rem);
+    padding: 15px;
     margin: 10% 0 10% 0;
     background-color: transparent;
+    background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
     border: none;
