--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ button::before {
 #difficulty-button {
     background-image: url("./res/button-lightblue.png");
 }
-#leaderboards-button, #pause-quit-button {
+#leaderboards-button, #leaderboards-back-button, #pause-quit-button {
     background-image: url("./res/button-pink.png");
 }
 
@@ -125,7 +125,7 @@ button::before {
 #difficulty-button:hover {
     background-image: url("./res/button-darkblue.png");
 }
-#leaderboards-button:hover, #pause-quit-button:hover {
+#leaderboards-button:hover, #leaderboards-back-button:hover, #pause-quit-button:hover {
     background-image: url("./res/button-purple.png");
 }
 
