--- a/style.css
+++ b/style.css
@@ -138,6 +138,28 @@ button::before {
     background-size: cover;
     box-shadow: 0 0 36px 0 lightgrey;
 }
+#next-container {
+    position: absolute;
+    left: -144px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 128px;
+    text-align: center;
+}
+#next-label {
+    color: #eee;
+    margin-bottom: 6px;
+}
+.highlightNext {
+    color: #fff;
+    text-shadow: 0 0 12px #fff;
+}
+#next-piece {
+    background-image: url("./res/tetris-bg.png");
+    background-size: auto;
+    border: 2px solid #aaa;
+    border-radius: 8px;
+}
 
 .block {
     width: 32px;
@@ -159,4 +181,8 @@ button::before {
     cursor: pointer;
     font-size: 1rem;
     transition: background 0.2s;
+}
+
+#next-piece-canvas {
+    background-image: url("./res/tetris-bg.png");
 }
