--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
     align-items: flex-start;
     padding: 1%;
     margin: 1%;
+    border: none;
 }
 
 .tab {
@@ -54,23 +55,19 @@ button {
     font-size: clamp(1rem, 2vw, 1.4rem);
     width: clamp(150px, 25vw, 300px);
     color: white;
-    background: #111;
     background-position: center;
     border: none;
     border-radius: 12px;
-    box-shadow: 0 0 10px #ff00ff, 0 0 20px #00ffff;
     padding: 0.8em 1.2em;
-    margin: 5%;
+    margin: 3%;
     cursor: pointer;
     z-index: 0;
 }
-
-/* the gradient border */
 button::before {
     content: "";
     position: absolute;
     inset: 0;
-    padding: 2px; /* border thickness */
+    padding: 2px;
     border-radius: inherit;
     background: linear-gradient(90deg, #ff00ff, #00ffff, #ff00ff);
     -webkit-mask:
@@ -79,16 +76,11 @@ button::before {
     -webkit-mask-composite: xor;
     mask-composite: exclude;
     z-index: -1;
-}
-
-@keyframes border-spin {
-    to { background-position: 200% center; }
-}
-
-button::before {
-    background: linear-gradient(90deg, #ff00ff, #00ffff, #ff00ff);
     background-size: 200% auto;
     animation: border-spin 5s linear infinite;
+}
+@keyframes border-spin {
+    to { background-position: 200% center; }
 }
 
 .diff-btn {
@@ -157,8 +149,6 @@ button::before {
 #next-piece {
     background-image: url("./res/tetris-bg.png");
     background-size: auto;
-    border: 2px solid #aaa;
-    border-radius: 8px;
 }
 
 .block {
