--- a/style.css
+++ b/style.css
@@ -37,11 +37,11 @@ body {
     padding: 0;
 }
 
-.menu button, #leaderboard-back-button {
+.menu button {
     position: relative;
     z-index: 0;
 }
-.menu button::before, #leaderboard-back-button:before {
+.menu button::before {
     content: "";
     position: absolute;
     inset: 0;
@@ -74,7 +74,7 @@ body {
 
 /*BUTTONS*/
 
-.menu button, #leaderboard-back-button {
+.menu button {
     font-family: monospace;
     font-size: clamp(1rem, 2vw, 1.4rem);
     width: clamp(150px, 25vw, 300px);
@@ -109,6 +109,13 @@ body {
 #login-menu,
 #register-menu {
     display: none;
+}
+
+#leaderboard-menu {
+    position: fixed;
+    top: 20vh;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 /*LOGIN-REGISTER*/
