--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@ body {
     font-size: 150%;
 }
 
+h1 {
+    position: absolute;
+    top: 5%;
+    text-align: center;
+}
+
 .ui {
     position: fixed;
     top: 0;
@@ -29,17 +35,23 @@ body {
 }
 
 .tab {
-    position: fixed;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    display: flex;
-    padding: 0;
 }
 
 .menu button {
     position: relative;
     z-index: 0;
+    font-family: monospace;
+    font-size: clamp(1rem, 2vw, 1.4rem);
+    width: clamp(150px, 25vw, 300px);
+    color: white;
+    background-position: center;
+    border: none;
+    border-radius: 12px;
+    padding: 0.8em 1.2em;
+    margin-top: 4vh;
+    cursor: pointer;
 }
 .menu button::before {
     content: "";
@@ -61,75 +73,28 @@ body {
     to { background-position: 200% center; }
 }
 
-.diff-elem, .leaderboard-elem {
-    margin: 5%;
-}
-
-.diff-elem {
-    background-image: url("resources/button-lightblue.png");
-}
-.diff-elem:hover {
-    background-image: url("resources/button-darkblue.png");
-}
-
-/*BUTTONS*/
-
-.menu button {
-    font-family: monospace;
-    font-size: clamp(1rem, 2vw, 1.4rem);
-    width: clamp(150px, 25vw, 300px);
-    color: white;
-    background-position: center;
-    border: none;
-    border-radius: 12px;
-    padding: 0.8em 1.2em;
-    margin: 1.5%;
-    cursor: pointer;
-}
-
-#pause-resume-button {
-    background-image: url("resources/button-yellow.png");
-}
-#new-game-button, #login-button, #register-button {
-    background-image: url("resources/button-teal.png");
-}
-#difficulty-button {
-    background-image: url("resources/button-lightblue.png");
-}
-#leaderboard-button, #leaderboard-back-button, .back-button {
-    background-image: url("resources/button-pink.png");
-}
-
-/*MENU*/
-
-#game,
-#pause-menu,
-#difficulty-menu,
-#leaderboard-menu,
-#login-menu,
-#register-menu {
-    display: none;
-}
-
-#leaderboard-menu {
-    position: fixed;
-    top: 20vh;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
 /*LOGIN-REGISTER*/
 
-.tab.menu form {
-    display: flex;
-    flex-direction: column;
+.tab {
+    display: none;
     align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+#main-menu {
+    display: flex;
+}
+
+.tab.menu form {
+    display: inherit;
+    align-items: inherit;
+    flex-direction: column;
     gap: 1rem;
 }
 .tab.menu form div {
     display: grid;
+    align-items: inherit;
     grid-template-columns: 100px 200px;
-    align-items: center;
     gap: 0.5rem;
 }
 
@@ -137,20 +102,11 @@ body {
     color: black;
 }
 
-/*TRANSITIONS*/
+/*MISC*/
 
-#pause-resume-button:hover {
-    background-image: url("resources/button-orange.png");
-
-}
-#new-game-button:hover, #login-button:hover, #register-button:hover {
-    background-image: url("resources/button-green.png");
-}
-#difficulty-button:hover {
-    background-image: url("resources/button-darkblue.png");
-}
-#leaderboard-button:hover, .back-button:hover {
-    background-image: url("resources/button-purple.png");
+.tetris-logo {
+    width: 35%;
+    margin: 2%;
 }
 
 #score {
@@ -174,10 +130,6 @@ body {
     color: #eee;
     margin-bottom: 6px;
 }
-.highlightNext {
-    color: #fff;
-    text-shadow: 0 0 12px #fff;
-}
 #next-piece {
     background-image: url("resources/tetris-bg.png");
     background-size: auto;
@@ -188,6 +140,38 @@ body {
     height: 32px;
     position: absolute;
     background-size: cover;
+}
+
+.leaderboard-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 6%;
+    width: 90vw;
+}
+
+.table-container {
+    width: 100%;
+    max-height: 65vh;
+    overflow-y: auto;
+    background-color: white;
+}
+
+.table-container thead th {
+    position: sticky;
+    top: 0;
+    z-index: 2;
+}
+
+.table-container table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.table-container th, .table-container td {
+    padding: 8px;
+    border-bottom: 1px solid #ddd;
 }
 
 /*UI SOUND*/
@@ -208,6 +192,10 @@ body {
 
 /*UI login*/
 
+.ui button {
+    background-color: darkslategrey;
+    padding: 2%;
+}
 .ui-div {
     display: flex;
     flex-direction: row;
@@ -215,7 +203,35 @@ body {
 .ui-div h4, .ui-div button {
     margin-right: 3%;
 }
-
 #ui-logout-button {
     display: none;
+}
+
+/*BUTTONS*/
+
+#pause-resume-button {
+    background-image: url("resources/button-yellow.png");
+}
+#new-game-button, #login-button, #register-button {
+    background-image: url("resources/button-teal.png");
+}
+#difficulty-button, #easy-button, #medium-button, #hard-button {
+    background-image: url("resources/button-lightblue.png");
+}
+#leaderboard-button, #leaderboard-back-button, .back-button {
+    background-image: url("resources/button-pink.png");
+}
+
+
+#pause-resume-button:hover {
+    background-image: url("resources/button-orange.png");
+}
+#new-game-button:hover, #login-button:hover, #register-button:hover {
+    background-image: url("resources/button-green.png");
+}
+#difficulty-button:hover, #easy-button:hover, #medium-button:hover, #hard-button:hover {
+    background-image: url("resources/button-darkblue.png");
+}
+#leaderboard-button:hover, .back-button:hover {
+    background-image: url("resources/button-purple.png");
 }
