--- a/style.css
+++ b/style.css
@@ -113,14 +113,27 @@ h1 {
     font-size: 150%;
 }
 
+.game-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #map {
     background-image: url("resources/tetris-bg.png");
     background-size: cover;
     box-shadow: 0 0 36px 0 lightgrey;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
 #next-container {
     position: absolute;
-    left: -144px;
+    right: 100%;
+    margin-right: 20px;
     top: 50%;
     transform: translateY(-50%);
     width: 128px;
@@ -152,7 +165,7 @@ h1 {
 }
 
 .table-container {
-    width: 100%;
+    width: 95%;
     max-height: 65vh;
     overflow-y: auto;
     background-color: white;
